0x0F-variadic_functions/test
3-print_all.c: In function ‘print_all’:
3-print_all.c:90:19: error: comparison between pointer and integer [-Werror]
  while (format[i] != NULL)
                   ^
3-print_all.c:95:18: error: comparison between pointer and integer [-Werror]
    if (format[i] == p[j].c)
                  ^
In file included from 3-print_all.c:1:0:
3-print_all.c: In function ‘print_char’:
3-print_all.c:15:28: error: ‘char’ is promoted to ‘int’ when passed through ‘...’ [-Werror]
  printf("%c%s", va_arg(ap, char), seperator);
                            ^
3-print_all.c:15:28: note: (so you should pass ‘int’ not ‘char’ to ‘va_arg’)
3-print_all.c:15:28: note: if this code is reached, the program will abort
3-print_all.c: In function ‘print_float’:
3-print_all.c:41:28: error: ‘float’ is promoted to ‘double’ when passed through ‘...’ [-Werror]
  printf("%f%s", va_arg(ap, float), seperator);
                            ^
3-print_all.c:41:28: note: if this code is reached, the program will abort
cc1: all warnings being treated as errors
